# ginnungagap

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPLIT_PLAN.md  dst-plan.md
.github/workflows/: ci.yml
config/: default.toml
crates/ggap-consensus/: Cargo.toml
crates/ggap-consensus/src/: config.rs  convert.rs  lib.rs  log_store.rs  network.rs  node.rs  router.rs  split.rs  state_machine.rs
crates/ggap-consensus/tests/: sim_cluster.rs  single_node.rs
crates/ggap-node/: Cargo.toml
crates/ggap-node/src/: main.rs
crates/ggap-proto/: Cargo.toml  build.rs
crates/ggap-proto/src/: lib.rs
crates/ggap-server/: Cargo.toml
crates/ggap-server/benches/: kv_write.rs
crates/ggap-server/src/: admin_service.rs  convert.rs  kv_service.rs  lib.rs  raft_service.rs
crates/ggap-server/tests/: split_single_node.rs  three_node_cluster.rs  watch.rs
crates/ggap-storage/: Cargo.toml
crates/ggap-storage/src/: fjall.rs  keys.rs  lib.rs  mem.rs  shard_map.rs  traits.rs  ttl.rs  types.rs
crates/ggap-storage/tests/: split_crash_bugs.rs
crates/ggap-types/: Cargo.toml
crates/ggap-types/src/: lib.rs
docs/: ggap-consensus.md  ggap-node.md  ggap-proto.md  ggap-server.md  ggap-storage.md  ggap-types.md
proto/ginnungagap/v1/: cluster.proto  kv.proto  types.proto
