[package]
name = "ggap-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
ggap-types = { path = "../ggap-types" }
ggap-storage = { path = "../ggap-storage" }
ggap-proto = { path = "../ggap-proto" }
openraft = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = "0.10.0"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
