[package]
name = "ggap-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ggap-types = { path = "../ggap-types" }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
fjall = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
