[package]
name = "ggap-storage"
version = "0.1.0"
edition = "2021"

[features]
# Enables crash-injection helpers used by integration tests. Never enable in
# production builds.
test-utils = []

[dependencies]
ggap-types = { path = "../ggap-types" }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
fjall = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[[test]]
name = "split_crash_bugs"
required-features = ["test-utils"]

[dev-dependencies]
tempfile = "3"
bincode = { workspace = true }
